feature: update camellia example